# Voter-ClI

./: Cargo.toml
src/: main.rs  mod.rs  regmain.rs  sync.rs
src/commands/: allparser.rs  gov.rs  mod.rs  parser.rs  proposal.rs  vote.rs  voteparser.rs
