[package]
name = "govbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0.130", features = ["derive"] }
newline-converter = "0.2.1"
chrono = "0.4.23"
serenity = { default-features = false, features = ["client", "gateway", "model", 
          "rustls_backend"], version = "0.11"}
dotenv = "0.15.0"